# ttt

./: .clang-format  .editorconfig  CMakeLists.txt  README.md
.github/workflows/: main.yml
dependencies/wcwidth/: wcwidth.cpp  wcwidth.h
resources/: LICENSE.txt
src/: main.cpp
test/: leading.txt  space.txt
